<resources>
    <string name="app_name">Encrypit</string>
    <string name="dot">.</string>
    <string name="CE">CE</string>
    <string name="open">(</string>
    <string name="close">)</string>
    <string name="div">/</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="mult">*</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="minus">-</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="plus">+</string>
    <string name="zero">0</string>
    <string name="back">Back</string>
    <string name="equals">=</string>
    <string name="decrypt">Decrypt</string>
    <string name="encrypt">Encrypt</string>
    <string name="enter_container_password">Enter container password</string>
    <string name="save">save</string>
    <string name="hello">hello</string>
</resources>
