<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical">

    <TextView
        android:id="@+id/topDisplay"
        android:layout_width="match_parent"
        android:layout_height="80sp"
        android:ellipsize="start"
        android:gravity="end"
        android:singleLine="true"
        android:textColor="@color/numberButton"
        android:textSize="45sp" />

    <TextView
        android:id="@+id/bottomDisplay"
        android:layout_width="match_parent"
        android:layout_height="80sp"
        android:textColor="@color/numberButton"
        android:gravity="end"
        android:textSize="35sp"
        android:ellipsize="end"
        android:singleLine="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/Clear"
                style="@style/ActionButtonStyle"
                android:text="@string/CE"/>
            <TextView
                android:id="@+id/Open"
                style="@style/ActionButtonStyle"
                android:text="@string/open"/>
            <TextView
                android:id="@+id/Close"
                style="@style/ActionButtonStyle"
                android:text="@string/close"/>
            <TextView
                android:id="@+id/Divide"
                style="@style/ActionButtonStyle"
                android:text="@string/div"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/Seven"
                style="@style/NumberButtonStyle"
                android:text="@string/seven"/>
            <TextView
                android:id="@+id/Eight"
                style="@style/NumberButtonStyle"
                android:text="@string/eight"/>
            <TextView
                android:id="@+id/Nine"
                style="@style/NumberButtonStyle"
                android:text="@string/nine"/>
            <TextView
                android:id="@+id/Multiply"
                style="@style/ActionButtonStyle"
                android:text="@string/mult"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/Four"
                style="@style/NumberButtonStyle"
                android:text="@string/four"/>
            <TextView
                android:id="@+id/Five"
                style="@style/NumberButtonStyle"
                android:text="@string/five"/>
            <TextView
                android:id="@+id/Six"
                style="@style/NumberButtonStyle"
                android:text="@string/six"/>
            <TextView
                android:id="@+id/Minus"
                style="@style/ActionButtonStyle"
                android:text="@string/minus"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/One"
                style="@style/NumberButtonStyle"
                android:text="@string/one"/>
            <TextView
                android:id="@+id/Two"
                style="@style/NumberButtonStyle"
                android:text="@string/two"/>
            <TextView
                android:id="@+id/Three"
                style="@style/NumberButtonStyle"
                android:text="@string/three"/>
            <TextView
                android:id="@+id/Plus"
                style="@style/ActionButtonStyle"
                android:text="@string/plus"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
        <TextView
            android:id="@+id/Dot"
            style="@style/NumberButtonStyle"
            android:text="@string/dot"/>
        <TextView
            android:id="@+id/Zero"
            style="@style/NumberButtonStyle"
            android:text="@string/zero"/>
        <TextView
            android:id="@+id/Back"
            style="@style/NumberButtonStyle"
            android:text="@string/back"/>
        <TextView
            android:id="@+id/Equals"
            style="@style/ActionButtonStyle"
            android:text="@string/equals"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>